style: fix UpvoteButton mobile responsiveness

--- a/src/components/FeedbackHub/UpvoteButton/UpvoteButton.module.scss
+++ b/src/components/FeedbackHub/UpvoteButton/UpvoteButton.module.scss
@@ -17,7 +17,7 @@
 }
 
 @media (width <= var.$breakpoint-762) {
-  .container {
+  .button {
     gap: 0.625rem;
     width: initial;
     flex-direction: row;
